--- a/src/views/test.ejs
+++ b/src/views/test.ejs
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/test.css">
     <script>
         // $(document).ready(function() {
         //     $(".demo").click(function(){
@@ -54,16 +55,6 @@
         })
     </script>
 </head>
-    <style>
-        .test{
-            display: block;
-            width: 100px;
-            height: 50px;
-            border: 3px;
-            background-color: orange;
-        }
-    </style>
-
 <body>
     <a href="/" class="test">
         Test
@@ -72,5 +63,7 @@
     <button class="demo">
         Demo
     </button>
+
+    <div class="img">abcd</div>
 </body>
 </html>
