--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -16,9 +16,9 @@
             </div>
             <div class="menu">
                 <ul class="menu2">
-                    <li><a class="active">Trang chủ</a></li>
+                    <li><a href="/">Trang chủ</a></li>
                     <li><a href="/translate">Dịch thuật</a></li>
-                    <li><a href="/about">Về Chúng tôi</a></li>
+                    <li><a class="active">Về Chúng tôi</a></li>
                 </ul>
             </div>
             <div class="user">
@@ -37,30 +37,6 @@
                     </div>
                 <%} %>
             </div>
-        </div>
-    </div>
-        <div class="banner">
-            <div class="app-text">
-                <h3>Chào mừng đến với Infinity Translate</h3>
-                <h1>Nơi bạn thoả sức khám phá thế giới ngôn ngữ nhiều màu sắc</h1>
-                <p>Hãy cùng chúng tôi thoả mãn niềm đam mê dịch thuật trong bạn!</p>
-            </div>
-        </div>
-        <div class="social-icons">
-            <ul>
-                <li>
-                    <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
-                </li>
-            </ul>
         </div>
     </div>
 </body>
