--- a/src/public/css/translate.css
+++ b/src/public/css/translate.css
@@ -1,3 +1,6 @@
+/* Import Google Font - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -13,6 +16,162 @@ ul{
     list-style: none;
 }
 
+/* translate */
+body{
+  padding: 0 10px;
+  min-height: 100vh;
+  background-image: url('../img/bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+
+.container{
+    position: absolute;
+    top: 80%; /* Căn phần trên của div content tới 50% của container */
+    left: 50%; /* Căn phần trái của div content tới 50% của container */
+    transform: translate(-50%, -50%); /* Di chuyển div content lùi lại 50% của chính nó theo cả chiều ngang và chiều dọc */
+    height: 100%;
+    max-width: 1200px;
+    width: 100%;
+    padding: 30px;
+    border-radius: 7px;
+    z-index: 2000;
+}
+.wrapper{
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+.wrapper .text-input{
+  display: flex;
+  border-bottom: 1px solid #ccc;
+}
+.text-input .to-text{
+  border-radius: 0px;
+  border-left: 1px solid #ccc;
+}
+.text-input textarea{
+  height: 400px;
+  width: 100%;
+  border: none;
+  outline: none;
+  resize: none;
+  /* background: none; */
+  font-size: 18px;
+  padding: 10px 15px;
+  border-radius: 5px;
+  background-color: #fff;
+}
+.text-input textarea::placeholder{
+  color: #4c4c4c;
+}
+.controls, li, .icons, .icons i{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.controls{
+  list-style: none;
+  padding: 12px 15px;
+}
+.controls .row .icons{
+  width: 38%;
+}
+.controls .row .icons i{
+  width: 50px;
+  color: #adadad;
+  font-size: 14px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+  justify-content: center;
+}
+.controls .row.from .icons{
+  padding-right: 15px;
+  border-right: 1px solid #ccc;
+}
+.controls .row.to .icons{
+  padding-left: 15px;
+  border-left: 1px solid #ccc;
+}
+.controls .row select{
+  color: #333;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  /* background: none; */
+  padding-left: 5px;
+}
+.text-input textarea::-webkit-scrollbar{
+  width: 4px;
+}
+.controls .row select::-webkit-scrollbar{
+  width: 8px;
+}
+.text-input textarea::-webkit-scrollbar-track,
+.controls .row select::-webkit-scrollbar-track{
+  background: #fff;
+}
+.text-input textarea::-webkit-scrollbar-thumb{
+  background: #ddd;
+  border-radius: 8px;
+}
+.controls .row select::-webkit-scrollbar-thumb{
+  background: #999;
+  border-radius: 8px;
+  border-right: 2px solid #ffffff;
+}
+.controls .exchange{
+  color: #adadad;
+  cursor: pointer;
+  font-size: 16px;
+  transition: transform 0.2s ease;
+}
+.controls i:active{
+  transform: scale(0.9);
+}
+.container button{
+  width: 100%;
+  padding: 14px;
+  outline: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 20px;
+  font-size: 17px;
+  border-radius: 5px;
+  background: #5372F0;
+}
+
+@media (max-width: 660px){
+  .container{
+    padding: 20px;
+  }
+  .wrapper .text-input{
+    flex-direction: column;
+  }
+  .text-input .to-text{
+    border-left: 0px;
+    border-top: 1px solid #ccc;
+  }
+  .text-input textarea{
+    height: 200px;
+  }
+  .controls .row .icons{
+    display: none;
+  }
+  .container button{
+    padding: 13px;
+    font-size: 16px;
+  }
+  .controls .row select{
+    font-size: 16px;
+  }
+  .controls .exchange{
+    font-size: 14px;
+  }
+}
+
+/* Page */
 .circle {
     width: 70px;
     height: 70px;
@@ -55,9 +214,6 @@ ul{
 .header{
     width: 100%;
     height: 100vh;
-    background-image: url('../img/bg.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
     position: relative;
 }
 
@@ -68,8 +224,7 @@ ul{
     bottom: 0%;
     left: 0;
     right: 0;
-    opacity: 0.5;
-    z-index: 1;
+    opacity: 0.1;
     background-color: #000;
 }
 
@@ -81,7 +236,6 @@ ul{
     justify-content: space-around;
     align-items: center;
     position: absolute;
-    z-index: 2;
     padding-top: 60px;
 }
 
@@ -118,20 +272,21 @@ ul{
 
 .banner{
     position: absolute;
-    top: 19%;
-    left: 0;
+    top: 15%; /* Căn phần trên của thẻ h3 tới 50% của container */
+    left: 50%; /* Căn phần trái của thẻ h3 tới 50% của container */
+    transform: translate(-50%, -50%); /* Di chuyển thẻ h3 lùi lại 50% của chính nó theo cả chiều ngang và chiều dọc */
     color: #fff;
     z-index: 2;
 }
 
 .app-text{
-    width: 60%;
-    padding-left: 50px;
+    width: 100%;
+    padding-left: 10px;
 }
 
 .app-text h3{
     margin-top: 100px;
-    font-size: 25px;
+    font-size: 40px;
     color: #fff;
     font-weight: 900;
     letter-spacing: 2px;
