--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-container sign-in">
-            <form action="check-login" method="post">
+            <form>
                 <h1>Sign In</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -43,9 +43,8 @@
                 <span>or use your email password</span>
                 <input type="email" placeholder="Email" name="loginEmail" id="loginEmail">
                 <input type="password" placeholder="Password" name="loginPassword" id="loginPassword">
-                <a href="#">Forget Your Password?</a>
-                <input type="submit" value="submit">
-                <!-- <button type="button">Sign In</button> -->
+                <a href="/">Quay trở lại trang chủ?</a>
+                <button type="button" id="loginSubmit">Sign In</button>
             </form>
         </div>
         <div class="toggle-container">
