--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -4,7 +4,7 @@
     <title>Translate infinity</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="/css/home.css" />
+    <link rel="stylesheet" type="text/css" href="/css/home.css" >
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,900|Roboto&display=swap" rel="stylesheet" />
 </head>
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="navbar">
             <div class="logo">
-                <a href="#"><img src="img/logo.jpg" /></a>
+                <a href="#"><img src="/img/logo.jpg" /></a>
             </div>
             <div class="menu">
                 <ul class="menu2">
