--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -58,20 +58,19 @@ ul{
     background-image: url('../img/bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    position: relative;
 }
 
-.header:before{
+/* .header:before{
     content: "";
     position: absolute;
     top: 0%;
     bottom: 0%;
     left: 0;
     right: 0;
-    opacity: 0.5;
+    opacity: 0.1;
     z-index: 1;
     background-color: #000;
-}
+} */
 
 
 .header .navbar{
@@ -118,9 +117,7 @@ ul{
 
 .banner{
     position: absolute;
-    top: 19%;
-    left: 0;
-    color: #fff;
+    top: 30%;
     z-index: 2;
 }
 
@@ -130,7 +127,7 @@ ul{
 }
 
 .app-text h3{
-    margin-top: 100px;
+    /* margin-top: 100px; */
     font-size: 25px;
     color: #fff;
     font-weight: 900;
@@ -247,3 +244,45 @@ ul{
 }
 
 
+/* ============ Flash card ================ */
+
+.flashcard-container:hover .flashcard {
+    transform: rotateY(180deg);
+}
+
+.flashcard-container, .question, .answer {
+    width:70vw;
+    height:50vw;
+}
+
+.flashcard {
+    transition: 0.5s;
+    transform-style: preserve-3d;
+}
+
+.question {
+    z-index: 5;
+}
+
+.answer {
+    transform: rotateX(180deg);
+}
+
+.question, .answer{
+z-index: 100;
+backface-visibility: hidden;
+border:1px solid #aaa;
+border-radius:10px 10px;
+margin:auto;
+color: #fff;
+background-color: #000;
+text-align:center;
+position: absolute;
+top: 200px;
+left: 300px;
+
+}
+.content{
+padding-top:30%;
+font-size:40pt;
+}
